--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "@mui/material": "^5.6.1",
     "@mui/x-data-grid": "^5.8.0",
     "axios": "^0.26.1",
+    "chart.js": "^3.7.1",
     "fetch": "^1.1.0",
+    "nth-check": ">=2.0.1",
     "react": "^18.0.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4",
-    "nth-check": ">=2.0.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,9 +53,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^14.1.1",
-    "jest-location-mock": "^1.0.9",
-    "ejs": ">=3.1.7",
     "async": ">=2.6.4",
+    "ejs": ">=3.1.7",
+    "jest-location-mock": "^1.0.9",
     "nth-check": ">=2.0.1"
   }
 }
